--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -5,7 +5,7 @@
     <title>AirBnB Clone</title>
     <link rel="stylesheet" href="styles/2-common.css"/>
     <link rel="stylesheet" href="styles/2-header.css"/>
-    <link rel="stylesheet" href="styles/2-footer.css">
+    <link rel="stylesheet" href="styles/2-footer.css"/>
   </head>
   <body>
     <header></header>
