--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -9,7 +9,10 @@
     <link rel="icon" href="images/icon.png" type="image/png">
   </head>
   <body>
-    <header></header>
+    <header>
+        <div class="logo">
+        </div>
+    </header>
     <footer><p>Best School</p></footer>
   </body>
 </html>
